[gd_scene load_steps=15 format=3 uid="uid://d1okj4j5hilur"]

[ext_resource type="Texture2D" uid="uid://xlteh8jgne4l" path="res://assets/ranking.png" id="1_bj3tg"]
[ext_resource type="Script" uid="uid://cwpoqiw7yidwi" path="res://scenes/StartMenu.gd" id="1_uiu1t"]
[ext_resource type="Texture2D" uid="uid://dcknye13ljc8k" path="res://assets/options.png" id="3_n3vkw"]
[ext_resource type="Texture2D" uid="uid://csr5oyoslxsmv" path="res://assets/play.png" id="4_lqy8p"]
[ext_resource type="Texture2D" uid="uid://s7m40fiyfkgq" path="res://assets/exit.png" id="5_yq4vl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0rf7e"]
texture = ExtResource("3_n3vkw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v0rto"]
texture = ExtResource("3_n3vkw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4xgvj"]
texture = ExtResource("3_n3vkw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pnrw1"]
texture = ExtResource("4_lqy8p")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q7mni"]
texture = ExtResource("4_lqy8p")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kh8bu"]
texture = ExtResource("4_lqy8p")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o3cdw"]
texture = ExtResource("5_yq4vl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nm14s"]
texture = ExtResource("5_yq4vl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wmm7s"]
texture = ExtResource("5_yq4vl")

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_uiu1t")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
z_as_relative = false
position = Vector2(429, 470)
scale = Vector2(1.1224, 1.0787)
texture = ExtResource("1_bj3tg")

[node name="OptionsButton" type="Button" parent="."]
z_index = 1
offset_left = 390.0
offset_top = 334.0
offset_right = 515.0
offset_bottom = 384.0
theme_override_styles/hover = SubResource("StyleBoxTexture_0rf7e")
theme_override_styles/pressed = SubResource("StyleBoxTexture_v0rto")
theme_override_styles/normal = SubResource("StyleBoxTexture_4xgvj")

[node name="PlayButton" type="Button" parent="."]
z_index = 1
offset_left = 384.0
offset_top = 163.0
offset_right = 509.0
offset_bottom = 213.0
theme_override_styles/hover = SubResource("StyleBoxTexture_pnrw1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_q7mni")
theme_override_styles/normal = SubResource("StyleBoxTexture_kh8bu")

[node name="ExitButton" type="Button" parent="."]
z_index = 1
offset_left = 391.0
offset_top = 444.0
offset_right = 516.0
offset_bottom = 494.0
theme_override_styles/hover = SubResource("StyleBoxTexture_o3cdw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_nm14s")
theme_override_styles/normal = SubResource("StyleBoxTexture_wmm7s")

[node name="MultplayerButton" type="Button" parent="."]
z_index = 1
offset_left = 399.0
offset_top = 249.0
offset_right = 488.0
offset_bottom = 296.0
text = "multplayer"
